Fix: Make sure it looks half decent on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,9 @@
 
 .wrapper {
   margin: 0 auto;
-  max-width: 50vw;
-  padding: 3rem 0;
+  padding: 3rem 2rem;
+  @media all and (min-width: 1000px) {
+    max-width: 50vw;
+    padding: 3rem 0;
+  }
 }
