--- a/src/index.scss
+++ b/src/index.scss
@@ -366,6 +366,7 @@ code {
 
 .flex {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .flex--column {
